<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_login.xml -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity3"
    android:background="#ffff"
    >

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"

        android:src="@drawable/img_2" />

    <TextView
        android:id="@+id/tag_accessibility_heading"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="175dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="99dp"
        android:layout_toEndOf="@id/logoImageView"
        android:text="@string/App"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_activity_login"
        android:backgroundTint="#4396EA"/>

    <TextView
        android:id="@+id/forgottenpassword"
        android:layout_width="wrap_content"
        style="@style/CardView.Dark"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forget_pass"
        android:backgroundTint="@color/black"
        android:textColor="#0D69C5"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/haventSignupyetTextView"
        android:layout_width="wrap_content"
        style="@style/CardView.Dark"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgottenpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:backgroundTint="@color/black"
        android:textColor="#0D69C5"
        android:textSize="16sp" />

</RelativeLayout>
